// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connections Duck Action creators enqueueConnection marks trigger as queued 1`] = `
Object {
  "creation": null,
  "konnectors": Object {
    "testprovider": Object {
      "triggers": Object {
        "trigger-1": Object {
          "isEnqueued": true,
        },
      },
    },
  },
}
`;

exports[`Connections Duck Action creators enqueueConnection should ignore when trigger has no _id 1`] = `
Object {
  "creation": null,
  "konnectors": Object {
    "testprovider": Object {},
  },
}
`;

exports[`Connections Duck Action creators purgeQueue marks all accounts as not queued 1`] = `
Object {
  "anotherprovider": Object {
    "768ccdaa9d7b11e7869aae88b1c12d46": Object {
      "isEnqueued": false,
    },
  },
  "testprovider": Object {
    "17375ac5a59e4d6585fc7d1e1c75ec74": Object {
      "isEnqueued": false,
    },
    "63c670ea9d7b11e7b5888c88b1c12d46": Object {
      "isEnqueued": false,
    },
  },
}
`;

exports[`Connections Duck Selectors getConnectionsByKonnector returns expected connections 1`] = `
Array [
  Object {
    "account": "81a548fca81455ec2c2644dd55008b52",
    "error": "LOGIN_FAILED",
    "hasError": true,
    "isConnected": false,
    "isRunning": false,
  },
]
`;

exports[`Connections Duck Selectors getQueue returns one queued connection per queued account 1`] = `Array []`;
